Please enter the commit message for your changes. Lines starting  with '' will be ignored, and an empty message aborts the commit.
 On branch main
 Your branch is up to date with 'origin/main'.

 Changes to be committed:
	modified:   public/index.html
	modified:   src/App.css
	new file:   src/assets/N.png
	modified:   src/assets/chef.png
	modified:   src/assets/findus.png
	new file:   src/assets/gallery01.jpg
	deleted:    src/assets/gallery01.png
	new file:   src/assets/gallery02.jpg
	deleted:    src/assets/gallery02.png
	deleted:    src/assets/gericht.png
	new file:   src/assets/menu.jpg
	deleted:    src/assets/menu.png
	deleted:    src/assets/menu22.jpg
	new file:   src/assets/nitan.png
	modified:   src/assets/sign.png
	deleted:    src/assets/sign1.png
	modified:   src/assets/spoon.svg
	modified:   src/assets/welcome.png
	modified:   src/components/Footer/Newsletter.css
	modified:   src/components/Menuitem/MenuItem.css
	modified:   src/components/Navbar/Navbar.css
	modified:   src/components/Navbar/Navbar.jsx
	modified:   src/constants/images.js
	modified:   src/container/AboutUs/AboutUs.jsx
	modified:   src/container/Chef/Chef.css
	modified:   src/container/Chef/Chef.jsx
	modified:   src/container/Findus/FindUs.jsx
	modified:   src/container/Footer/Footer.css
	modified:   src/container/Footer/Footer.jsx
	modified:   src/container/Gallery/Gallery.css
	modified:   src/container/Header/Header.css
	modified:   src/container/Intro/Intro.css
	modified:   src/index.css

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -48,7 +48,7 @@
 }
 
 .app__navbar-login a:hover {
-  border-bottom: 1px solid var(--color-golden);
+  border-bottom: 1px solid var(--color-blue);
 
 }
 
@@ -76,7 +76,7 @@
 
 .app__navbar-smallscreen_overlay .overlay__close {
   font-size: 27px;
-  color: var(--color-golden);
+  color: var(--color-blue);
   position: absolute;
   top: 20px;
   right: 20px;
@@ -89,7 +89,7 @@
 .app__navbar-smallscreen_links li {
   margin: 2rem;
   cursor: pointer;
-  color: var(--color-golden);
+  color: var(--color-blue);
   font-size: 2rem;
   text-align: center;
   font-family: var(--font-base);
