--- a/src/container/Footer/Footer.css
+++ b/src/container/Footer/Footer.css
@@ -52,7 +52,7 @@
 }
 
 .app__footer-links_icons svg:hover {
-  color: var(--color-golden);
+  color: var(--color-blue);
 }
 
 .app__footer-headtext {
